--- a/text/literatura.bib
+++ b/text/literatura.bib
@@ -6,6 +6,20 @@
     year={2016}
 }
 
+@book{opencv,
+  title={Learning OpenCV: Computer vision with the OpenCV library},
+  author={Gary BRADSKI and Adrian KAEHLER},
+  publisher={O'Reilly Media, Inc.},
+  year={2008}
+}
+
+@book{comp-vision,
+  title={Computer vision: algorithms and applications},
+  author={Richard SZELISKI},
+  publisher={Springer},
+  year={2010}
+}
+
 @book{tricks,
     title={Neural Networks: Tricks of the Trade},
     author={Geneviève ORR and Klaus-Robert MÜLLER},
@@ -21,6 +35,28 @@
   number={11},
   pages={2278--2324},
   year={1998},
+  publisher={IEEE}
+}
+
+@article{objectness,
+  title={Measuring the objectness of image windows},
+  author={Bogdan ALEXE and Thomas DESELAERS and Vittorio FERRARI},
+  journal={IEEE transactions on pattern analysis and machine intelligence},
+  volume={34},
+  number={11},
+  pages={2189--2202},
+  year={2012},
+  publisher={IEEE}
+}
+
+@article{cat-independent-proposals,
+  title={Category-independent object proposals with diverse ranking},
+  author={Ian ENDRES and Derek HOIEM},
+  journal={IEEE transactions on pattern analysis and machine intelligence},
+  volume={36},
+  number={2},
+  pages={222--234},
+  year={2014},
   publisher={IEEE}
 }
 
@@ -290,7 +326,16 @@
   organization={CVPR}
 }
 
-@inproceedings{bypass,
+@conference{multi-classification,
+  title={CNN-RNN: A unified framework for multi-label image classification},
+  author={Jiang WANG and Yi YANG and Junhua MAO and Zhiheng HUANG and Chang HUANG and Wei Xu},
+  booktitle={IEEE Conference on Computer Vision and Pattern Recognition {CVPR}},
+  pages={2285--2294},
+  year={2016},
+  organization={IEEE}
+}
+
+@conference{bypass,
   title={Traffic sign recognition with multi-scale convolutional networks},
   author={Pierre SERMANET and Yann LECUN},
   booktitle={The International Joint Conference on Neural Networks {IJCNN}},
