--- a/text/ondrej-pesek-dp-2018.tex
+++ b/text/ondrej-pesek-dp-2018.tex
@@ -12,7 +12,7 @@
   oneside,       			% Oboustranný tisk
   pdftex,				    % překlad bude proveden programem 'pdftex' do PDF
   english,
-  %draft
+  draft
 ]{report}       			% dokument třídy 'zpráva'
 
 
