--- a/text/zkratky.tex
+++ b/text/zkratky.tex
@@ -40,6 +40,9 @@
 	\novazkratka{ResNet}
 	      {ResNet}
 	      {Residual network}
+	\novazkratka{RNN}
+	      {RNN}
+	      {Recurrent neural network}
 	\novazkratka{RoI}
 	      {RoI}
 	      {Region of interest}
