--- a/text/literatura.bib
+++ b/text/literatura.bib
@@ -96,8 +96,6 @@
   timestamp = {Wed, 07 Jun 2017 14:40:12 +0200}
 }
 
-
-
 @Article{batch-norm,
   title     = {Batch Normalization: Accelerating Deep Network Training by Reducing Internal Covariate Shift},
   author    = {Sergey IOFFE and Christian SZEGEDY},
@@ -120,6 +118,16 @@
   year={1997},
   publisher={Soc Neuroscience}
 }
+
+@Article{voc,
+   title = {The Pascal Visual Object Classes Challenge: A Retrospective},
+   author = {> EVERINGHAM and S. M. A. ESLAMI and L. VAN GOOL and C. K. I. WILLIAMS and J. WINN and A. ZISSERMAN},
+   journal = {International Journal of Computer Vision {IJCV}},
+   volume = {111},
+   number = {1},
+   pages = {98--136},
+   year = {2015}
+} 
 
 @Article{hubel-cats1,
   title={Receptive fields of single neurones in the cat's striate cortex},
