--- a/text/zkratky.tex
+++ b/text/zkratky.tex
@@ -31,6 +31,9 @@
 	\novazkratka{ILSVRC}
 	      {ILSVRC}
 	      {ImageNet Large Scale Visual Recognition Challenge}
+	\novazkratka{mAP}
+	      {mAP}
+	      {Mean average precision}
 	\novazkratka{R-CNN}
 	      {R-CNN}
 	      {Region-based convolutional neural network}
@@ -52,5 +55,8 @@
 	\novazkratka{SVM}
 	      {SVM}
 	      {Support Vector Machine}
+	\novazkratka{VOC}
+	      {VOC}
+	      {Visual object classes}
 	      
 \end{seznamzkratek}
