--- a/text/literatura.bib
+++ b/text/literatura.bib
@@ -253,6 +253,14 @@
   year = {2014},
 }
 
+@conference{fcns,
+  title={Fully convolutional networks for semantic segmentation},
+  author={Jonathan LONG and Evan SHELHAMER and Trevor DARRELL},
+  booktitle={IEEE conference on computer vision and pattern recognition {CVPR}},
+  pages={3431--3440},
+  year={2015}
+}
+
 @conference{inception-v2,
   title={Rethinking the inception architecture for computer vision},
   author={Christian SZEGEDY and Vincent VANHOUCKE and Sergey IOFFE and Jon SHLENS and Zbigniew WOJNA},
