--- a/text/zkratky.tex
+++ b/text/zkratky.tex
@@ -19,6 +19,9 @@
 	\novazkratka{FC}
 	      {FC}
 	      {Fully connected}
+	\novazkratka{FCN}
+	      {FCN}
+	      {Fully convolutional network}
 	\novazkratka{FPN}
 	      {FPN}
 	      {Feature pyramid network}
