--- a/text/literatura.bib
+++ b/text/literatura.bib
@@ -359,3 +359,22 @@
   year={2011},
   organization={IEEE}
 }
+
+@misc{gplv2,
+  title        = {GNU General Public License},
+  version      = {2},
+  shorthand    = {GPL},
+  organization = {Free Software Foundation},
+  url          = {http://www.gnu.org/licenses/gpl.html},
+  pagination   = {section},
+  language     = {english},
+  date         = {2018-04-20}
+  }
+
+@misc{mit,
+  title        = {MIT License},
+  url          = {https://opensource.org/licenses/MIT},
+  pagination   = {section},
+  language     = {english},
+  date         = {2018-04-20}
+  }
